discovery-frontend/src/app/data-preparation/dataflow/dataflow-detail/component/edit-dataflow-rule/rule/antlr4/RuleParser.js
// Generated from src/app/rule/antlr4/Rule.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RuleVisitor = require('./RuleVisitor').RuleVisitor;

var grammarFileName = "Rule.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'&'", "'|'", "'('", "')'", "','", null, 
                     null, null, null, null, "'null'", null, null, null, 
                     null, "'-'", "'!'", "'^'", "'*'", "'/'", "'%'", "'+'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'", 
                     "'||'", "'='" ];

var symbolicNames = [ null, null, null, null, null, null, null, "WS", "RULE_NAME", 
                      "ARG_NAME", "BOOLEAN", "IDENTIFIER", "NULL", "LONG", 
                      "DOUBLE", "STRING", "REGEX", "MINUS", "NOT", "POW", 
                      "MUL", "DIV", "MODULO", "PLUS", "LT", "LEQ", "GT", 
                      "GEQ", "EQ", "NEQ", "AND", "OR", "ASSIGN" ];

var ruleNames =  [ "ruleset", "args", "expr", "fn", "fnArgs" ];

function RuleParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    //return this;
}

RuleParser.prototype = Object.create(antlr4.Parser.prototype);
RuleParser.prototype.constructor = RuleParser;

Object.defineProperty(RuleParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RuleParser.EOF = antlr4.Token.EOF;
RuleParser.T__0 = 1;
RuleParser.T__1 = 2;
RuleParser.T__2 = 3;
RuleParser.T__3 = 4;
RuleParser.T__4 = 5;
RuleParser.T__5 = 6;
RuleParser.WS = 7;
RuleParser.RULE_NAME = 8;
RuleParser.ARG_NAME = 9;
RuleParser.BOOLEAN = 10;
RuleParser.IDENTIFIER = 11;
RuleParser.NULL = 12;
RuleParser.LONG = 13;
RuleParser.DOUBLE = 14;
RuleParser.STRING = 15;
RuleParser.REGEX = 16;
RuleParser.MINUS = 17;
RuleParser.NOT = 18;
RuleParser.POW = 19;
RuleParser.MUL = 20;
RuleParser.DIV = 21;
RuleParser.MODULO = 22;
RuleParser.PLUS = 23;
RuleParser.LT = 24;
RuleParser.LEQ = 25;
RuleParser.GT = 26;
RuleParser.GEQ = 27;
RuleParser.EQ = 28;
RuleParser.NEQ = 29;
RuleParser.AND = 30;
RuleParser.OR = 31;
RuleParser.ASSIGN = 32;

RuleParser.RULE_ruleset = 0;
RuleParser.RULE_args = 1;
RuleParser.RULE_expr = 2;
RuleParser.RULE_fn = 3;
RuleParser.RULE_fnArgs = 4;


function RulesetContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RuleParser.RULE_ruleset;
    return this;
}

RulesetContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RulesetContext.prototype.constructor = RulesetContext;

RulesetContext.prototype.RULE_NAME = function() {
    return this.getToken(RuleParser.RULE_NAME, 0);
};

RulesetContext.prototype.args = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArgsContext);
    } else {
        return this.getTypedRuleContext(ArgsContext,i);
    }
};

RulesetContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitRuleset(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RuleParser.RulesetContext = RulesetContext;

RuleParser.prototype.ruleset = function() {

    var localctx = new RulesetContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RuleParser.RULE_ruleset);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 10;
        this.match(RuleParser.RULE_NAME);
        this.state = 14;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RuleParser.ARG_NAME) {
            this.state = 11;
            this.args();
            this.state = 16;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArgsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RuleParser.RULE_args;
    return this;
}

ArgsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgsContext.prototype.constructor = ArgsContext;

ArgsContext.prototype.ARG_NAME = function() {
    return this.getToken(RuleParser.ARG_NAME, 0);
};

ArgsContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ArgsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitArgs(this);
    } else {
        return visitor.visitChildren(this);
    }
};




RuleParser.ArgsContext = ArgsContext;

RuleParser.prototype.args = function() {

    var localctx = new ArgsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RuleParser.RULE_args);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 17;
        this.match(RuleParser.ARG_NAME);
        this.state = 18;
        this.match(RuleParser.T__0);
        this.state = 19;
        this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RuleParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;


 
ExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function FunctionArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FunctionArrayExprContext.prototype = Object.create(ExprContext.prototype);
FunctionArrayExprContext.prototype.constructor = FunctionArrayExprContext;

RuleParser.FunctionArrayExprContext = FunctionArrayExprContext;

FunctionArrayExprContext.prototype.fn = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FnContext);
    } else {
        return this.getTypedRuleContext(FnContext,i);
    }
};
FunctionArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitFunctionArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DoubleExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DoubleExprContext.prototype = Object.create(ExprContext.prototype);
DoubleExprContext.prototype.constructor = DoubleExprContext;

RuleParser.DoubleExprContext = DoubleExprContext;

DoubleExprContext.prototype.DOUBLE = function() {
    return this.getToken(RuleParser.DOUBLE, 0);
};
DoubleExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitDoubleExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function RegularExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

RegularExprContext.prototype = Object.create(ExprContext.prototype);
RegularExprContext.prototype.constructor = RegularExprContext;

RuleParser.RegularExprContext = RegularExprContext;

RegularExprContext.prototype.REGEX = function() {
    return this.getToken(RuleParser.REGEX, 0);
};
RegularExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitRegularExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AddSubExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AddSubExprContext.prototype = Object.create(ExprContext.prototype);
AddSubExprContext.prototype.constructor = AddSubExprContext;

RuleParser.AddSubExprContext = AddSubExprContext;

AddSubExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

AddSubExprContext.prototype.PLUS = function() {
    return this.getToken(RuleParser.PLUS, 0);
};

AddSubExprContext.prototype.MINUS = function() {
    return this.getToken(RuleParser.MINUS, 0);
};
AddSubExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitAddSubExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NullExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NullExprContext.prototype = Object.create(ExprContext.prototype);
NullExprContext.prototype.constructor = NullExprContext;

RuleParser.NullExprContext = NullExprContext;

NullExprContext.prototype.NULL = function() {
    return this.getToken(RuleParser.NULL, 0);
};
NullExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitNullExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LongExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LongExprContext.prototype = Object.create(ExprContext.prototype);
LongExprContext.prototype.constructor = LongExprContext;

RuleParser.LongExprContext = LongExprContext;

LongExprContext.prototype.LONG = function() {
    return this.getToken(RuleParser.LONG, 0);
};
LongExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitLongExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LogicalAndOrExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LogicalAndOrExprContext.prototype = Object.create(ExprContext.prototype);
LogicalAndOrExprContext.prototype.constructor = LogicalAndOrExprContext;

RuleParser.LogicalAndOrExprContext = LogicalAndOrExprContext;

LogicalAndOrExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

LogicalAndOrExprContext.prototype.AND = function() {
    return this.getToken(RuleParser.AND, 0);
};

LogicalAndOrExprContext.prototype.OR = function() {
    return this.getToken(RuleParser.OR, 0);
};
LogicalAndOrExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitLogicalAndOrExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function BooleanExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BooleanExprContext.prototype = Object.create(ExprContext.prototype);
BooleanExprContext.prototype.constructor = BooleanExprContext;

RuleParser.BooleanExprContext = BooleanExprContext;

BooleanExprContext.prototype.BOOLEAN = function() {
    return this.getToken(RuleParser.BOOLEAN, 0);
};
BooleanExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitBooleanExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NestedExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NestedExprContext.prototype = Object.create(ExprContext.prototype);
NestedExprContext.prototype.constructor = NestedExprContext;

RuleParser.NestedExprContext = NestedExprContext;

NestedExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};
NestedExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitNestedExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DoubleArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DoubleArrayExprContext.prototype = Object.create(ExprContext.prototype);
DoubleArrayExprContext.prototype.constructor = DoubleArrayExprContext;

RuleParser.DoubleArrayExprContext = DoubleArrayExprContext;

DoubleArrayExprContext.prototype.DOUBLE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RuleParser.DOUBLE);
    } else {
        return this.getToken(RuleParser.DOUBLE, i);
    }
};

DoubleArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitDoubleArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StringArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StringArrayExprContext.prototype = Object.create(ExprContext.prototype);
StringArrayExprContext.prototype.constructor = StringArrayExprContext;

RuleParser.StringArrayExprContext = StringArrayExprContext;

StringArrayExprContext.prototype.STRING = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RuleParser.STRING);
    } else {
        return this.getToken(RuleParser.STRING, i);
    }
};

StringArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitStringArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LongArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LongArrayExprContext.prototype = Object.create(ExprContext.prototype);
LongArrayExprContext.prototype.constructor = LongArrayExprContext;

RuleParser.LongArrayExprContext = LongArrayExprContext;

LongArrayExprContext.prototype.LONG = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RuleParser.LONG);
    } else {
        return this.getToken(RuleParser.LONG, i);
    }
};

LongArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitLongArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LogicalOpExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LogicalOpExprContext.prototype = Object.create(ExprContext.prototype);
LogicalOpExprContext.prototype.constructor = LogicalOpExprContext;

RuleParser.LogicalOpExprContext = LogicalOpExprContext;

LogicalOpExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

LogicalOpExprContext.prototype.LT = function() {
    return this.getToken(RuleParser.LT, 0);
};

LogicalOpExprContext.prototype.LEQ = function() {
    return this.getToken(RuleParser.LEQ, 0);
};

LogicalOpExprContext.prototype.GT = function() {
    return this.getToken(RuleParser.GT, 0);
};

LogicalOpExprContext.prototype.GEQ = function() {
    return this.getToken(RuleParser.GEQ, 0);
};

LogicalOpExprContext.prototype.EQ = function() {
    return this.getToken(RuleParser.EQ, 0);
};

LogicalOpExprContext.prototype.NEQ = function() {
    return this.getToken(RuleParser.NEQ, 0);
};

LogicalOpExprContext.prototype.ASSIGN = function() {
    return this.getToken(RuleParser.ASSIGN, 0);
};
LogicalOpExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitLogicalOpExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function FunctionExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

FunctionExprContext.prototype = Object.create(ExprContext.prototype);
FunctionExprContext.prototype.constructor = FunctionExprContext;

RuleParser.FunctionExprContext = FunctionExprContext;

FunctionExprContext.prototype.fn = function() {
    return this.getTypedRuleContext(FnContext,0);
};
FunctionExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitFunctionExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExprArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExprArrayExprContext.prototype = Object.create(ExprContext.prototype);
ExprArrayExprContext.prototype.constructor = ExprArrayExprContext;

RuleParser.ExprArrayExprContext = ExprArrayExprContext;

ExprArrayExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};
ExprArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitExprArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StringExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StringExprContext.prototype = Object.create(ExprContext.prototype);
StringExprContext.prototype.constructor = StringExprContext;

RuleParser.StringExprContext = StringExprContext;

StringExprContext.prototype.STRING = function() {
    return this.getToken(RuleParser.STRING, 0);
};
StringExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitStringExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function UnaryOpExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

UnaryOpExprContext.prototype = Object.create(ExprContext.prototype);
UnaryOpExprContext.prototype.constructor = UnaryOpExprContext;

RuleParser.UnaryOpExprContext = UnaryOpExprContext;

UnaryOpExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

UnaryOpExprContext.prototype.MINUS = function() {
    return this.getToken(RuleParser.MINUS, 0);
};

UnaryOpExprContext.prototype.NOT = function() {
    return this.getToken(RuleParser.NOT, 0);
};
UnaryOpExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitUnaryOpExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IdentifierArrayExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IdentifierArrayExprContext.prototype = Object.create(ExprContext.prototype);
IdentifierArrayExprContext.prototype.constructor = IdentifierArrayExprContext;

RuleParser.IdentifierArrayExprContext = IdentifierArrayExprContext;

IdentifierArrayExprContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RuleParser.IDENTIFIER);
    } else {
        return this.getToken(RuleParser.IDENTIFIER, i);
    }
};

IdentifierArrayExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitIdentifierArrayExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LogicalAndOrExpr2Context(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LogicalAndOrExpr2Context.prototype = Object.create(ExprContext.prototype);
LogicalAndOrExpr2Context.prototype.constructor = LogicalAndOrExpr2Context;

RuleParser.LogicalAndOrExpr2Context = LogicalAndOrExpr2Context;

LogicalAndOrExpr2Context.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};
LogicalAndOrExpr2Context.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitLogicalAndOrExpr2(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function MulDivModuloExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MulDivModuloExprContext.prototype = Object.create(ExprContext.prototype);
MulDivModuloExprContext.prototype.constructor = MulDivModuloExprContext;

RuleParser.MulDivModuloExprContext = MulDivModuloExprContext;

MulDivModuloExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

MulDivModuloExprContext.prototype.MUL = function() {
    return this.getToken(RuleParser.MUL, 0);
};

MulDivModuloExprContext.prototype.DIV = function() {
    return this.getToken(RuleParser.DIV, 0);
};

MulDivModuloExprContext.prototype.MODULO = function() {
    return this.getToken(RuleParser.MODULO, 0);
};
MulDivModuloExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitMulDivModuloExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PowOpExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PowOpExprContext.prototype = Object.create(ExprContext.prototype);
PowOpExprContext.prototype.constructor = PowOpExprContext;

RuleParser.PowOpExprContext = PowOpExprContext;

PowOpExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

PowOpExprContext.prototype.POW = function() {
    return this.getToken(RuleParser.POW, 0);
};
PowOpExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitPowOpExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AssignExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AssignExprContext.prototype = Object.create(ExprContext.prototype);
AssignExprContext.prototype.constructor = AssignExprContext;

RuleParser.AssignExprContext = AssignExprContext;

AssignExprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

AssignExprContext.prototype.ASSIGN = function() {
    return this.getToken(RuleParser.ASSIGN, 0);
};
AssignExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitAssignExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IdentifierExprContext(parser, ctx) {
	ExprContext.call(this, parser);
    ExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IdentifierExprContext.prototype = Object.create(ExprContext.prototype);
IdentifierExprContext.prototype.constructor = IdentifierExprContext;

RuleParser.IdentifierExprContext = IdentifierExprContext;

IdentifierExprContext.prototype.IDENTIFIER = function() {
    return this.getToken(RuleParser.IDENTIFIER, 0);
};
IdentifierExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof RuleVisitor ) {
        return visitor.visitIdentifierExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



RuleParser.prototype.expr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, RuleParser.RULE_expr, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new UnaryOpExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 22;
            _la = this._input.LA(1);
            if(!(_la===RuleParser.MINUS || _la===RuleParser.NOT)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 23;
            this.expr(23);
            break;

        case 2:
            localctx = new NestedExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 24;
            this.match(RuleParser.T__3);
            this.state = 25;
            this.expr(0);
            this.state = 26;
            this.match(RuleParser.T__4);
            break;

        case 3:
            localctx = new FunctionExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 28;
            this.fn();
            break;

        case 4:
            localctx = new FunctionArrayExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 29;
            this.fn();
            this.state = 32; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 30;
            		this.match(RuleParser.T__5);
            		this.state = 31;
            		this.fn();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 34; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 5:
            localctx = new IdentifierExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 36;
            this.match(RuleParser.IDENTIFIER);
            break;

        case 6:
            localctx = new NullExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 37;
            this.match(RuleParser.NULL);
            break;
